[package]
name = "changer"
version = "0.1.0"
authors = ["jallen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9"
clap = "2.33"
log = "0.4"
env_logger = "0.8.3"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[features]
vendored-zmq = ['zmq/vendored']
